<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RatingActivity"
    android:background="@drawable/rating_bg">

    <ImageButton
        android:id="@+id/ib_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorTrans"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_clear_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/connected"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/do_you_love_dora_vpn"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_yes_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_yes_rate"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/activation_bg"
        android:text="@string/yes_rate_it"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/btn_no"
        app:layout_constraintEnd_toEndOf="@+id/btn_no"
        app:layout_constraintStart_toStartOf="@+id/btn_no" />

    <Button
        android:id="@+id/btn_no"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/no_not_really"
        android:textColor="#787878"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>