<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_arrow_back"
                android:scaleType="fitCenter"
                android:background="@color/colorTrans">
            </ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/get_premium"
                android:textColor="@color/colorWhite"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="50dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:srcCompat="@drawable/ic_all_inclusive_24dp">
                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="sans-serif-thin"
                        android:text="@string/no_ads"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:srcCompat="@drawable/ic_all_inclusive_24dp">
                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="sans-serif-thin"
                        android:text="@string/increase_connection_spreed"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:srcCompat="@drawable/ic_all_inclusive_24dp">
                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="sans-serif-thin"
                        android:text="@string/premium_vertical_location"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_1month"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="20dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="#000"
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:text="@string/_1_month">
                            </TextView>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/total_price_12_99">
                            </TextView>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical|end"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:text="@string/_12_99"
                                android:textColor="@color/colorAccent">
                            </TextView>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/monthly">
                            </TextView>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical|end">
                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                app:srcCompat="@drawable/ic_chevron_right_24dp"
                                android:layout_marginRight="10dp">
                            </ImageView>
                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_6month"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    app:cardCornerRadius="30dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_marginTop="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="20dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="#000"
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:text="@string/_6_months">
                            </TextView>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/total_price_53_99">
                            </TextView>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical|end"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:text="@string/_8_99"
                                android:textColor="@color/colorAccent">
                            </TextView>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/monthly">
                            </TextView>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical|end">
                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                app:srcCompat="@drawable/ic_chevron_right_24dp"
                                android:layout_marginRight="10dp">
                            </ImageView>
                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_12month"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    app:cardCornerRadius="30dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_marginTop="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="20dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="#000"
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:text="@string/_12_months">
                            </TextView>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/total_price_66_99">
                            </TextView>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical|end"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:text="@string/_5_83"
                                android:textColor="@color/colorAccent">
                            </TextView>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/monthly">
                            </TextView>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical|end">
                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                app:srcCompat="@drawable/ic_chevron_right_24dp"
                                android:layout_marginRight="10dp">
                            </ImageView>
                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subscription_notices"
                android:textSize="11sp"
                android:textColor="@color/colorTextSecondary"
                android:gravity="center"
                android:layout_marginTop="20dp">
            </TextView>
        </LinearLayout>
    </ScrollView>


</LinearLayout>